--- a/index.html
+++ b/index.html
@@ -12,171 +12,177 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
+    <body class="is-preload">
+        <!-- Wrapper -->
+        <div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
-						</div>
-					</header>
-
-				
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>CISC 3160 Portfolio - Dominguez<br />
-								 </a></h1>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="cartoon.html">
-										<h2>Cartoon Project</h2>
-										<div class="content">
-											<p></p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-							</section>
-						</div>
-					</div>
+            <!-- Header -->
+            <header id="header">
+                <div class="inner">
+                </div>
+            </header>
 
 
-			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-            <script src="assets/js/cartoon.js"></script>
-	</body>
+            <!-- Main -->
+            <div id="main">
+                <div class="inner">
+                    <header>
+                        <h1>
+                            CISC 3160 Portfolio - Dominguez<br />
+                            </a>
+                        </h1>
+                    </header>
+                    <section class="tiles">
+                        <article class="style1">
+                            <span class="image">
+                                <img src="images/pic01.jpg" alt="" />
+                            </span>
+                            <a href="cartoon.html">
+                                <h2>Cartoon</h2>
+                                <div class="content">
+                                    <p></p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style2">
+                            <span class="image">
+                                <img src="images/pic02.jpg" alt="" />
+                            </span>
+                            <a href="animation.html">
+                                <h2>Animation</h2>
+                                <div class="content">
+                                    <p></p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style3">
+                            <span class="image">
+                                <img src="images/pic03.jpg" alt="" />
+                            </span>
+                            <a href="interactive_display.html">
+                                <h2>Interactive Display</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style4">
+                            <span class="image">
+                                <img src="images/pic04.jpg" alt="" />
+                            </span>
+                            <a href="data_visualization.html">
+                                <h2>Data Visualization</h2>
+                                <div class="content">
+                                    <p></p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style5">
+                            <span class="image">
+                                <img src="images/pic05.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Aliquam</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style6">
+                            <span class="image">
+                                <img src="images/pic06.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Veroeros</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style2">
+                            <span class="image">
+                                <img src="images/pic07.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Ipsum</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style3">
+                            <span class="image">
+                                <img src="images/pic08.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Dolor</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style1">
+                            <span class="image">
+                                <img src="images/pic09.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Nullam</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style5">
+                            <span class="image">
+                                <img src="images/pic10.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Ultricies</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style6">
+                            <span class="image">
+                                <img src="images/pic11.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Dictum</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="style4">
+                            <span class="image">
+                                <img src="images/pic12.jpg" alt="" />
+                            </span>
+                            <a href="generic.html">
+                                <h2>Pretium</h2>
+                                <div class="content">
+                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                </div>
+                            </a>
+                        </article>
+                    </section>
+                </div>
+            </div>
+
+
+        </div>
+
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+        <script src="assets/js/cartoon.js"></script>
+        <script src="assets/js/animation.js"></script>
+        <script src="assets/js/data_visualization.js"></script>
+        <script src="assets/js/data.js"></script>
+
+    </body>
 </html>
