--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <a href="interactive_display.html">
                                 <h2>Interactive Display</h2>
                                 <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                    <p></p>
                                 </div>
                             </a>
                         </article>
@@ -82,10 +82,10 @@
                             <span class="image">
                                 <img src="images/pic05.jpg" alt="" />
                             </span>
-                            <a href="generic.html">
-                                <h2>Aliquam</h2>
+                            <a href="WickEditorProject.html">
+                                <h2>Wick Editor(html)</h2>
                                 <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                    <p></p>
                                 </div>
                             </a>
                         </article>
@@ -93,10 +93,10 @@
                             <span class="image">
                                 <img src="images/pic06.jpg" alt="" />
                             </span>
-                            <a href="generic.html">
-                                <h2>Veroeros</h2>
+                            <a href="WickEditorProject.wick">
+                                <h2>Wick Editor(wick)</h2>
                                 <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                    <p></p>
                                 </div>
                             </a>
                         </article>
@@ -104,10 +104,10 @@
                             <span class="image">
                                 <img src="images/pic07.jpg" alt="" />
                             </span>
-                            <a href="generic.html">
-                                <h2>Ipsum</h2>
+                            <a href="Animated_scene.html">
+                                <h2>Animated Scene(hmtl)</h2>
                                 <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                    <p></p>
                                 </div>
                             </a>
                         </article>
@@ -115,57 +115,14 @@
                             <span class="image">
                                 <img src="images/pic08.jpg" alt="" />
                             </span>
-                            <a href="generic.html">
-                                <h2>Dolor</h2>
+                            <a href="Animated_scene.wick">
+                                <h2>Animated Scene(wick)</h2>
                                 <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                    <p></p>
                                 </div>
                             </a>
                         </article>
-                        <article class="style1">
-                            <span class="image">
-                                <img src="images/pic09.jpg" alt="" />
-                            </span>
-                            <a href="generic.html">
-                                <h2>Nullam</h2>
-                                <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                                </div>
-                            </a>
-                        </article>
-                        <article class="style5">
-                            <span class="image">
-                                <img src="images/pic10.jpg" alt="" />
-                            </span>
-                            <a href="generic.html">
-                                <h2>Ultricies</h2>
-                                <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                                </div>
-                            </a>
-                        </article>
-                        <article class="style6">
-                            <span class="image">
-                                <img src="images/pic11.jpg" alt="" />
-                            </span>
-                            <a href="generic.html">
-                                <h2>Dictum</h2>
-                                <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                                </div>
-                            </a>
-                        </article>
-                        <article class="style4">
-                            <span class="image">
-                                <img src="images/pic12.jpg" alt="" />
-                            </span>
-                            <a href="generic.html">
-                                <h2>Pretium</h2>
-                                <div class="content">
-                                    <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                                </div>
-                            </a>
-                        </article>
+                       
                     </section>
                 </div>
             </div>
