--- a/Animated_scene.html
+++ b/Animated_scene.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
-    
+
     <video controls width="400" height="300">
         <source src="Animated_scene.mp4" type="video/mp4">
 
         Video tag is not supported in this browser.
     </video>
+    <a href="index.html">Return to Main Page</a>
 
 </body>
 </html>
