--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 </div>
                             </a>
                         </article>
-                       
+
                     </section>
                 </div>
             </div>
@@ -140,6 +140,9 @@
         <script src="assets/js/animation.js"></script>
         <script src="assets/js/data_visualization.js"></script>
         <script src="assets/js/data.js"></script>
+
+
+        <a href="https://www.dropbox.com/s/3mq8asck3c9anno/Animated_scene.mp4?dl=0">Couldn't get the webpage to play the Animated Scene, here it is in case.</a>
 
     </body>
 </html>
