--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="inner">
                     <header>
                         <h1>
-                            CISC 3160 Portfolio - Dominguez<br />
+                            CISC 3160 Portfolio - nuh-uh<br />
                             </a>
                         </h1>
                     </header>
